<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/my_blue"
    tools:context=".ui.searchBar.SearchBarFragment">


    <EditText
        android:id="@+id/edttxt_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="@string/edt_name"
        android:background="@drawable/edttxt_search_background"
        android:drawableEnd="@drawable/ic_user_tag"
        android:ems="10"
        android:hint="@string/edt_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/my_orange"
        app:layout_constraintEnd_toStartOf="@+id/btn_filter"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_filter"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/my_light_blue"
        android:contentDescription="@string/content_description_filter"
        app:cornerRadius="6dp"
        app:icon="@drawable/ic_filter"
        app:iconGravity="top"
        app:layout_constraintBottom_toBottomOf="@+id/edttxt_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edttxt_search" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_nationality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_nationality"
        android:textSize="11sp"
        android:backgroundTint="@color/my_light_blue"
        app:cornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edttxt_search" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_gender"
        android:textSize="11sp"
        android:backgroundTint="@color/my_light_blue"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_reset"
        app:layout_constraintStart_toEndOf="@+id/btn_nationality"
        app:layout_constraintTop_toBottomOf="@+id/edttxt_search" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_reset"
        android:textSize="11sp"
        android:backgroundTint="@color/my_light_blue"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edttxt_search" />

</androidx.constraintlayout.widget.ConstraintLayout>